Added JSONFunctions, began handling message types